--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,7 +19,7 @@
       "**/core.python*": true,
       "**/CVS": true
    },
-   "files.autoSave": "off",
+   "files.autoSave": "off=",
    "workbench.colorTheme": "Visual Studio Dark",
 "editor.defaultFormatter": "HookyQR.beautify",
 "html.format.wrapLineLength": 200
