--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.3.4
 Django==3.2.4
 django-allauth==0.41.0
+django-countries==7.2.1
+django-crispy-forms==1.12.0
 oauthlib==3.1.1
 Pillow==8.2.0
 pylint-django==2.4.4
