--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.3.4
+countries==0.2.0
+crispy-bootstrap5==0.4
 Django==3.2.4
 django-allauth==0.41.0
 django-countries==7.2.1
@@ -11,3 +13,4 @@ python3-openid==3.2.0
 pytz==2021.1
 requests-oauthlib==1.3.0
 sqlparse==0.4.1
+stripe==2.60.0
